Update README and okteto.yml for improved development workflow
- Add make build && make start instructions to README for Okteto development
- Update okteto.yml to use okteto/golang:1 image for dev environment

--- a/okteto.yml
+++ b/okteto.yml
@@ -7,7 +7,7 @@ deploy:
 
 dev:
   booking-management:
-    image: booking-management
+    image: okteto/golang:1
     command: bash
     workdir: /app
     sync:
