Add Payments service with Node.js and baggage header support
- Create complete Node.js payments service with Express framework
- Implement baggage header middleware for distributed tracing
- Add structured logging with Winston and baggage context
- Create /process-payment endpoint with Stripe simulation
- Add HTTP client with automatic baggage propagation
- Include comprehensive input validation and error handling
- Add Docker support with Node.js 20 and health checks
- Update docker-compose.yml to include payments service
- Add payments service to Okteto manifest for cloud deployment
- Implement proper security with non-root user in container

--- a/okteto.yml
+++ b/okteto.yml
@@ -1,6 +1,8 @@
 build:
   booking-management:
     context: ./booking-management
+  payments:
+    context: ./payments
 
 deploy:
   compose: docker-compose.yml
@@ -21,3 +23,16 @@ dev:
       - DB_USER=postgres
       - DB_PASS=postgres
       - DB_NAME=booking_management
+
+  payments:
+    image: okteto/node:20
+    command: bash
+    workdir: /app
+    sync:
+      - ./payments:/app
+    forward:
+      - 3000:3000
+    environment:
+      - PORT=3000
+      - NODE_ENV=development
+      - LOG_LEVEL=debug
