--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,17 @@ services:
     depends_on:
       - postgres
 
+  payments:
+    build:
+      context: ./payments
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - PORT=3000
+      - NODE_ENV=production
+      - LOG_LEVEL=info
+
   postgres:
     image: postgres:latest
     environment:
