Add Okteto test configuration and documentation for payments service
- Configure test execution in Okteto manifest for payments service
- Add comprehensive testing documentation to README
- Enable cloud-based test execution with 54 test coverage
- Include test breakdown: unit tests, integration tests, and validation scenarios

--- a/okteto.yml
+++ b/okteto.yml
@@ -7,6 +7,14 @@ build:
 deploy:
   compose: docker-compose.yml
 
+test:
+  payments:
+    image: okteto/node:20
+    context: ./payments
+    commands:
+      - npm install
+      - npm test
+
 dev:
   booking-management:
     image: okteto/golang:1
