Add new booking service with Go REST API and health endpoint
- Create booking service with Go 1.24 and Gorilla Mux router
- Implement health check endpoint with structured JSON logging
- Add multi-stage Dockerfile with security best practices
- Create Makefile with build, start, watch, and development commands
- Update docker-compose.yml to include booking service on port 8081
- Update okteto.yml with build and development configuration
- Successfully deployed to Okteto cloud environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,15 @@ services:
       - NODE_ENV=production
       - LOG_LEVEL=info
 
+  booking:
+    build:
+      context: ./booking
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8081"
+    environment:
+      - PORT=8081
+
   postgres:
     image: postgres:latest
     environment:
