Update booking-management dependency condition to service_healthy
- Change postgres dependency from simple list to service_healthy condition
- Ensures booking-management waits for postgres health check before starting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       - DB_PASS=postgres
       - DB_NAME=booking_management
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   payments:
     build:
