Add booking-management/booking to .gitignore
- Ignore booking-management/booking build artifact
- Prevents accidentally committing build binaries

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,5 @@ go.work.sum
 booking/booking
 booking/bin/
 booking-management/booking-management
+booking-management/booking
 booking-management/bin/
