Add worker service for Kafka event processing
- Created new worker service to consume booking and cancellation events from Kafka
- Added PostgreSQL integration for event processing
- Updated docker-compose.yml with worker service configuration and postgres healthcheck
- Added worker service to Okteto manifest for build and dev environments
- Updated .gitignore to exclude worker build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ booking/bin/
 booking-management/booking-management
 booking-management/booking
 booking-management/bin/
+worker/worker
+worker/bin/
