--- a/okteto.yml
+++ b/okteto.yml
@@ -5,6 +5,8 @@ build:
     context: ./payments
   booking:
     context: ./booking
+  worker:
+    context: ./worker
 
 deploy:
   compose: docker-compose.yml
@@ -57,4 +59,18 @@ dev:
       - 8081:8081
     environment:
       - PORT=8081
+      - KAFKA_BROKERS=kafka:9092
+
+  worker:
+    image: okteto/golang:1
+    command: bash
+    workdir: /app
+    sync:
+      - ./worker:/app
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=booking_management
       - KAFKA_BROKERS=kafka:9092
