--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - DB_NAME=booking_management
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_started
 
   payments:
     build:
@@ -77,7 +77,7 @@ services:
       - KAFKA_BROKERS=kafka:9092
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_started
       kafka:
         condition: service_started
 
@@ -92,11 +92,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./booking-management/db/scripts:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
 volumes:
   postgres_data:
