Add admin service with MySQL database integration
- Create complete Node.js admin service using Express.js and MySQL
- Add employees table with id, name, last_name, date_of_hiring, date_of_birthday, position
- Add complaints table with id, customer, date, text fields
- Include MySQL database initialization script with sample data (20 employees, 25 complaints)
- Add admin service to docker-compose.yml with MySQL 8.0 integration
- Update Okteto manifest for admin service build and development environment
- Add baggage header propagation middleware and structured logging
- Update .gitignore to exclude admin service artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ booking-management/booking
 booking-management/bin/
 worker/worker
 worker/bin/
+
+# Admin service
+admin/node_modules/
+admin/npm-debug.log*
+admin/yarn-debug.log*
+admin/yarn-error.log*
+admin/.env
