--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,25 @@ services:
       kafka:
         condition: service_started
 
+  admin:
+    build:
+      context: ./admin
+      dockerfile: Dockerfile
+    ports:
+      - "3001:3001"
+    environment:
+      - PORT=3001
+      - NODE_ENV=production
+      - LOG_LEVEL=info
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=admin
+      - DB_PASSWORD=admin
+      - DB_NAME=admin_db
+    depends_on:
+      mysql:
+        condition: service_started
+
   postgres:
     image: postgres:latest
     environment:
@@ -93,6 +112,21 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./booking-management/db/scripts:/docker-entrypoint-initdb.d
 
+  mysql:
+    image: mysql:8.0
+    environment:
+      - MYSQL_ROOT_PASSWORD=rootpassword
+      - MYSQL_DATABASE=admin_db
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=admin
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./admin/db/scripts:/docker-entrypoint-initdb.d
+    command: --default-authentication-plugin=mysql_native_password
+
 volumes:
   postgres_data:
   kafka_data:
+  mysql_data:
