Add gateway service with Go REST API implementation
- Create complete Go gateway service using Gorilla Mux router on port 8082
- Follow same patterns as booking and booking-management services with internal packages
- Add health check and service information endpoints with JSON responses
- Implement baggage header propagation middleware for distributed tracing
- Include CORS middleware for cross-origin request support
- Add structured logging with context-aware slog integration
- Create Dockerfile with multi-stage build using Go 1.24 and Alpine Linux
- Add gateway service to docker-compose.yml with port 8082 exposure
- Update Okteto manifest for gateway service build and development environment
- Add Makefile with build, start, watch commands for development workflow
- Update .gitignore to exclude gateway build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ booking-management/bin/
 worker/worker
 worker/bin/
 
+# Gateway service
+gateway/gateway
+gateway/bin/
+
 # Admin service
 admin/node_modules/
 admin/npm-debug.log*
