--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: ./booking-management
       dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     environment:
       - PORT=8080
       - DB_HOST=postgres
@@ -22,8 +22,8 @@ services:
     build:
       context: ./payments
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     environment:
       - PORT=3000
       - NODE_ENV=production
@@ -33,8 +33,8 @@ services:
     build:
       context: ./booking
       dockerfile: Dockerfile
-    ports:
-      - "8081:8081"
+    expose:
+      - "8081"
     environment:
       - PORT=8081
       - KAFKA_BROKERS=kafka:9092
@@ -44,8 +44,8 @@ services:
   kafka:
     image: apache/kafka:4.1.0
     container_name: kafka
-    ports:
-      - "9092:9092"
+    expose:
+      - "9092"
     volumes:
       - kafka_data:/opt/kafka/logs
     environment:
@@ -85,8 +85,8 @@ services:
     build:
       context: ./admin
       dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
+    expose:
+      - "3001"
     environment:
       - PORT=3001
       - NODE_ENV=production
@@ -108,6 +108,13 @@ services:
       - "8082:8082"
     environment:
       - PORT=8082
+      - ADMIN_SERVICE_URL=http://admin:3001
+      - BOOKING_SERVICE_URL=http://booking:8081
+      - BOOKING_MANAGEMENT_SERVICE_URL=http://booking-management:8080
+    depends_on:
+      - admin
+      - booking
+      - booking-management
 
   postgres:
     image: postgres:latest
@@ -115,8 +122,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=booking_management
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./booking-management/db/scripts:/docker-entrypoint-initdb.d
@@ -128,8 +135,8 @@ services:
       - MYSQL_DATABASE=admin_db
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=admin
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./admin/db/scripts:/docker-entrypoint-initdb.d
