Add React TypeScript frontend with enhanced CORS handling
- Create complete React TypeScript frontend application
- Implement runtime environment variable configuration
- Add comprehensive API service layer with SSL certificate handling
- Fix CORS issues with admin service routes through enhanced gateway proxy
- Update User interface to match actual API response structure
- Add multi-field search functionality in Users page
- Include Docker containerization with Nginx production server
- Add Okteto deployment configuration for cloud development

--- a/okteto.yml
+++ b/okteto.yml
@@ -11,6 +11,8 @@ build:
     context: ./admin
   gateway:
     context: ./gateway
+  frontend:
+    context: ./frontend
 
 deploy:
   compose: docker-compose.yml
@@ -107,3 +109,16 @@ dev:
       - 8082:8082
     environment:
       - PORT=8082
+
+  frontend:
+    image: okteto/node:20
+    command: bash
+    workdir: /app
+    sync:
+      - ./frontend:/app
+    forward:
+      - 3080:3000
+    environment:
+      - GATEWAY_API_BASE_URL=http://localhost:8082
+      - IGNORE_SSL_ERRORS=true
+      - PORT=3000
