--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,6 +116,18 @@ services:
       - booking
       - booking-management
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3080:80"
+    environment:
+      - GATEWAY_API_BASE_URL=https://gateway-${OKTETO_NAMESPACE}.test-nacho.dev.okteto.net
+      - IGNORE_SSL_ERRORS=true
+    depends_on:
+      - gateway
+
   postgres:
     image: postgres:latest
     environment:
