Rename frontend service to webapp
- Rename frontend directory to webapp
- Update docker-compose.yml service name and context path
- Update okteto.yml build context and sync paths
- Update all references from frontend to webapp for consistency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,9 +116,9 @@ services:
       - booking
       - booking-management
 
-  frontend:
+  webapp:
     build:
-      context: ./frontend
+      context: ./webapp
       dockerfile: Dockerfile
     ports:
       - "3080:80"
