--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,7 @@ services:
       - DB_NAME=admin_db
     depends_on:
       mysql:
-        condition: service_started
+        condition: service_healthy
 
   gateway:
     build:
@@ -153,6 +153,12 @@ services:
       - mysql_data:/var/lib/mysql
       - ./admin/db/scripts:/docker-entrypoint-initdb.d
     command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "admin", "-padmin"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
 volumes:
   postgres_data:
