--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - DB_NAME=booking_management
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
 
   payments:
     build:
@@ -77,7 +77,7 @@ services:
       - KAFKA_BROKERS=kafka:9092
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       kafka:
         condition: service_started
 
@@ -139,6 +139,12 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./booking-management/db/scripts:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d booking_management"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   mysql:
     image: mysql:8.0
