Add Kafka healthcheck and optimize database start periods
- Add healthcheck to kafka service using kafka-broker-api-versions.sh
- Update booking service dependency to use service_healthy condition
- Update worker service kafka dependency to service_healthy condition
- Optimize start_period for all healthchecks from 30s to 10s
- Ensures services only start when Kafka broker is ready to accept connections

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,8 @@ services:
       - PORT=8081
       - KAFKA_BROKERS=kafka:9092
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
 
   kafka:
     image: apache/kafka:4.1.0
@@ -63,6 +64,12 @@ services:
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_LOG_DIRS: '/opt/kafka/logs'
       CLUSTER_ID: 'oh-sxaDRTcyAr6pFRbXyzA'
+    healthcheck:
+      test: ["CMD-SHELL", "/opt/kafka/bin/kafka-broker-api-versions.sh --bootstrap-server localhost:9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   worker:
     build:
@@ -79,7 +86,7 @@ services:
       postgres:
         condition: service_healthy
       kafka:
-        condition: service_started
+        condition: service_healthy
 
   admin:
     build:
@@ -144,7 +151,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 30s
+      start_period: 10s
 
   mysql:
     image: mysql:8.0
@@ -164,7 +171,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 30s
+      start_period: 10s
 
 volumes:
   postgres_data:
