--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,11 +76,11 @@ services:
       - DB_PASSWORD=postgres
       - DB_NAME=booking_management
       - KAFKA_BROKERS=kafka:9092
-    depends_on:
-      postgres:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
+    #depends_on:
+    #  postgres:
+    #    condition: service_healthy
+    #  kafka:
+    #    condition: service_healthy
 
   admin:
     build:
