Added changes to include a manifest and a change only for the producer and consumer without having to deploy the kafka
Signed-off-by: Nacho Fuertes <nacho@okteto.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ services:
     environment:
       - PORT=8081
       - KAFKA_BROKERS=kafka:9092
-    depends_on:
-      kafka:
-        condition: service_healthy
+    #depends_on:
+    #  kafka:
+    #    condition: service_healthy
 
   kafka:
     image: apache/kafka:4.1.0
